// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`whiteSpaceTreatment renders 0 1`] = `
Array [
  .c0 {
  white-space-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders function 1`] = `
Array [
  .c0 {
  white-space-treatment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: has;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: has;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders invalid theme path 1`] = `
Array [
  .c0 {
  white-space-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders negative number 1`] = `
Array [
  .c0 {
  white-space-treatment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  white-space-treatment: July;
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-treatment: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: July;
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-treatment: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-treatment: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-treatment: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    white-space-treatment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-treatment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    white-space-treatment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-treatment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-treatment: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-treatment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-treatment: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  white-space-treatment: July;
}

@media May {
  .c0 {
    white-space-treatment: August;
  }
}

@media April {
  .c0 {
    white-space-treatment: September;
  }
}

@media January {
  .c0 {
    white-space-treatment: November;
  }
}

@media April {
  .c0 {
    white-space-treatment: August;
  }
}

@media June {
  .c0 {
    white-space-treatment: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: July;
}

@media May {
  .c0 {
    white-space-treatment: August;
  }
}

@media April {
  .c0 {
    white-space-treatment: September;
  }
}

@media January {
  .c0 {
    white-space-treatment: November;
  }
}

@media April {
  .c0 {
    white-space-treatment: August;
  }
}

@media June {
  .c0 {
    white-space-treatment: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space-treatment: November;
  }
}

@media April {
  .c0 {
    white-space-treatment: January;
  }
}

@media January {
  .c0 {
    white-space-treatment: December;
  }
}

@media April {
  .c0 {
    white-space-treatment: April;
  }
}

@media June {
  .c0 {
    white-space-treatment: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space-treatment: November;
  }
}

@media April {
  .c0 {
    white-space-treatment: January;
  }
}

@media January {
  .c0 {
    white-space-treatment: December;
  }
}

@media April {
  .c0 {
    white-space-treatment: April;
  }
}

@media June {
  .c0 {
    white-space-treatment: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    white-space-treatment: July;
  }
}

@media April {
  .c0 {
    white-space-treatment: August;
  }
}

@media January {
  .c0 {
    white-space-treatment: September;
  }
}

@media April {
  .c0 {
    white-space-treatment: November;
  }
}

@media June {
  .c0 {
    white-space-treatment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    white-space-treatment: July;
  }
}

@media April {
  .c0 {
    white-space-treatment: August;
  }
}

@media January {
  .c0 {
    white-space-treatment: September;
  }
}

@media April {
  .c0 {
    white-space-treatment: November;
  }
}

@media June {
  .c0 {
    white-space-treatment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space-treatment: January;
  }
}

@media April {
  .c0 {
    white-space-treatment: December;
  }
}

@media January {
  .c0 {
    white-space-treatment: April;
  }
}

@media April {
  .c0 {
    white-space-treatment: May;
  }
}

@media June {
  .c0 {
    white-space-treatment: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space-treatment: January;
  }
}

@media April {
  .c0 {
    white-space-treatment: December;
  }
}

@media January {
  .c0 {
    white-space-treatment: April;
  }
}

@media April {
  .c0 {
    white-space-treatment: May;
  }
}

@media June {
  .c0 {
    white-space-treatment: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders postitive number 1`] = `
Array [
  .c0 {
  white-space-treatment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders string 1`] = `
Array [
  .c0 {
  white-space-treatment: July;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: July;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: June;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: June;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceTreatment renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`whiteSpaceTreatment renders valid theme path 1`] = `
Array [
  .c0 {
  white-space-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
